# NJCU-PROJECTS

./: .gitignore  README.md  app.py  cleaned_faqs.xlsx  ingest.py  prompts.txt
chatbot_njcu/: README.md
chatbot_njcu/data/: feedback.csv  make_csv.py
chatbot_njcu/src/chatbot_njcu/backend/: build_index.py  pyproject.toml  requirements.txt
chatbot_njcu/src/chatbot_njcu/backend/app/: ingest.py  main.py  peek_store.py
chatbot_njcu/src/chatbot_njcu/backend/data/: qa.csv  qa_utf8.csv
chatbot_njcu/src/chatbot_njcu/backend/public/: chat.html
chatbot_njcu/src/chatbot_njcu/backend/vectorstore/: index.faiss  index.pkl
chatbot_njcu/src/chatbot_njcu/frontend/: package-lock.json  package.json
chatbot_njcu/src/chatbot_njcu/frontend/public/: chat.html  index.html
chatbot_njcu/src/chatbot_njcu/frontend/src/: App.css  App.js  index.css
chatbot_njcu/src/chatbot_njcu/frontend/src/components/: Chatbot.css  Chatbot.js  Header.css  Header.js  Sidebar.css  Sidebar.js
docs/: chat.html
